--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,26 @@ body {
     padding: 0;
 }
 
-#map {
-    width: 60%;
-    height: 800px;
-    margin: 5em auto;
+.title-container {
+  max-width: 760px;
+  margin: 0 auto;
+}
+
+.text-container img {
+  max-width: 100%;
+  
+}
+
+.full-bleed-image {
+  height: 100vh;
+  background-size: cover;
+  background-position: center right;
+  background-image: url('images/frontpage.jpeg');
+}
+
+.full-bleed-image .image-text {
+  background-color: rgb(171, 214, 252, 0.6);
+  margin-left: 50px;
 }
 
 .mapboxgl-popup-content h4 {
@@ -43,7 +59,7 @@ body {
   width: 100%;
   position: relative;
   z-index: 5;
-  padding: 2vh 0vh 5vh 0vh;
+  padding: 0vh 0vh 0vh 0vh;
 }
 
 #features {
@@ -56,6 +72,28 @@ body {
     width: 90vw;
     margin: 0 auto;
   }
+}
+
+.chart-title {
+  margin: 0 auto;
+  text-align: left;
+  line-height: 35px;
+  font-family: 'Source Serif Pro', serif;
+  font-weight: 600;
+  font-size: 2em;
+  max-width: 48vw;
+  padding-top: 30px;
+}
+
+.sub-title {
+  margin: 0 auto;
+  text-align: left;
+  font-family: 'Source Serif Pro', serif;
+  font-weight: 300;
+  font-size: 1.5em;
+  margin-top: 10px;
+  max-width: 48vw;
+  line-height: 25px;
 }
 
 #footer {
@@ -118,11 +156,11 @@ body {
 }
 
 .breeding {
-  background-color: #006d77;
+  background-color: #df8351;
 }
 
 .non-breeding {
-    background-color: #83c5be;
+    background-color: #7fb6c6;
 }
 
 /* each text box is a feature */
@@ -154,7 +192,7 @@ body {
   margin: 0px auto;
 }
 a, a:hover, a:visited {
-  color: #006d77;
+  color: #df8351;
 }
 .hidden {
   visibility: hidden;
@@ -184,7 +222,6 @@ a, a:hover, a:visited {
 .fully img{
   margin: 0 auto;
   max-width: 60%;
-  margin-top: 20px;
 }
 
 .light {
