--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,133 @@
-body {
+html, body {
     margin: 0;
     padding: 0;
+}
+
+
+.full-bleed-image {
+    height: 100vh;
+    background-color: #243949;
+    background-size: cover;
+    background-position: bottom center;
 }
 
 .title-container {
-  max-width: 760px;
-  margin: 0 auto;
-}
-
-.text-container img {
-  max-width: 100%;
-  
-}
-
-.full-bleed-image {
-  height: 100vh;
-  background-size: cover;
-  background-position: center right;
-  background-image: url('images/frontpage.jpeg');
+    max-width: 760px;
+    margin: 0 auto;
+    padding-top: 10%;
 }
 
 .full-bleed-image .image-text {
-  background-color: rgb(171, 214, 252, 0.6);
-  margin-left: 50px;
+  margin: 0 auto;
 }
 
-.mapboxgl-popup-content h4 {
-    font-weight: 500;
-    font-size: 0.9em;
-    border-width: 0px 0px 0.5px 0px;
-    border-style: solid;
-    border-color: rgb(80, 80, 80);
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+.main-container {
+    background-color: white;
+    margin: 0 auto;
+    padding-left: 30px;
+    padding-right: 30px;
+    z-index: 1000;
+    position: relative;
 }
 
-.mapboxgl-popup-content p {
+.image-text h1 {
+    text-align: center;
+    font-size: 45px;
+    line-height: 46px;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-family: 'Merriweather', serif;
+    margin: auto;
+    max-width: 600px;
+}
+
+.image-text h2 {
+  text-align: center;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 1.5;
+  font-family: 'Merriweather', serif;
+  text-shadow: 0px 1px 6px rgba(255, 255, 255, 0.5);
+  margin: auto;
+  padding-top: 20px;
+  max-width: 500px;
+}
+
+.image-text h4 {
+    text-align: center;
+    font-family: 'Roboto Condensed', sans-serif;
     font-weight: 300;
-    margin-top: 0.3em;
-    margin-bottom: 0em;
+    margin-top: 0;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px;
+    max-width: 600px;
 }
 
-body {
-    margin: 0;
-    padding: 0;
+
+.image-text p.byline {
+    text-align: center;
+    max-width: 600px;
+    font-family: 'Martel', serif;
+    font-weight: 400;
+    font-size: 0.9em;
+    margin: 1.5em auto 3em auto;
 }
+
+.main-container p {
+    max-width: 600px;
+    font-family: 'Martel', serif;
+    font-weight: 300;
+    text-align: left;
+    font-size: 1em;
+    margin: 0em auto;
+    padding-top: 1em;
+}
+
+p.firstpara {
+  padding-top: 5em;
+}
+
+/* here is the style of chart */
+.chart-holder {
+    margin: 0 auto;
+    text-align: left;
+    max-width: 600px;
+}
+
+.chart-title {
+    line-height: 35px;
+    font-family: 'Source Serif Pro', serif;
+    font-weight: 600;
+    font-size: 2em;
+    max-width: 48vw;
+    margin-top: 50px;
+    margin-left: 25vh;
+  }
+  
+.sub-title {
+    font-family: 'Source Serif Pro', serif;
+    font-weight: 300;
+    font-size: 1.2em;
+    line-height: 25px;
+    margin-left: 25vh;
+  }
+  
+
+/* here is the style of mapbox */
+
 
 #map {
   top: 0;
   height: 100vh;
   width: 100%;
   position: fixed;
+  z-index: -999;
 }
 
 #header {
   margin: auto;
-  min-height: 100vh;
   width: 100%;
   position: relative;
   z-index: 5;
@@ -74,27 +146,7 @@ body {
   }
 }
 
-.chart-title {
-  margin: 0 auto;
-  text-align: left;
-  line-height: 35px;
-  font-family: 'Source Serif Pro', serif;
-  font-weight: 600;
-  font-size: 2em;
-  max-width: 48vw;
-  padding-top: 30px;
-}
 
-.sub-title {
-  margin: 0 auto;
-  text-align: left;
-  font-family: 'Source Serif Pro', serif;
-  font-weight: 300;
-  font-size: 1.5em;
-  margin-top: 10px;
-  max-width: 48vw;
-  line-height: 25px;
-}
 
 #footer {
   min-height: 2vh;
@@ -153,10 +205,11 @@ body {
   max-width: 700px;
   margin: 1em auto 1em auto;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 .breeding {
-  background-color: #df8351;
+  background-color: #023e8a;
 }
 
 .non-breeding {
@@ -232,19 +285,20 @@ a, a:hover, a:visited {
   color: #fafafa;
   background-color: #444;
 }
-.step {
+
+.step-second {
   padding-bottom: 50vh;
-  opacity: 0.15;
-}
-.step.active {
   opacity: 0.99;
 }
-.step div {
+.step-second .active {
+  opacity: 0.99;
+}
+.step-second div {
   padding: 25px 50px;
   line-height: 25px;
   font-size: 13px;
 }
-.step img {
+.step-second img {
   width: 100%;
 }
 @media (max-width: 750px) {
@@ -258,4 +312,143 @@ a, a:hover, a:visited {
 .mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan, 
 .mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan .mapboxgl-canvas {
   touch-action: unset;
+}
+
+/* For scrollypart  */
+#scrolly {
+  position: relative;
+  background-color: #f3f3f3;
+}
+
+article {
+  position: relative;
+  padding: 0;
+  max-width: 35rem;
+  margin: 0 auto;
+  z-index: 100;
+}
+
+.sticky-thing {
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0;
+  width: 100%;
+  margin: 0;
+  background-size: cover;
+  background-color: #c2bcbe;
+  z-index: 0;
+  top: 0vh;
+  height: 100vh;
+  /* Center everything inside */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sticky-thing p {
+  font-weight: 900;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+  font-size: 1.25rem;
+  font-family: 'Frank Ruhl Libre', serif;
+  line-height: 30px;
+}
+
+.step {
+  margin: 0 auto 2rem auto;
+  margin-bottom: 25rem;
+  opacity: 0.7;
+  padding-bottom: 50vh;
+}
+
+.step:last-child {
+  margin-bottom: 0vh;
+}
+
+.step.is-active p {
+  opacity: 1;
+}
+
+.step p {
+  text-align: left;
+  padding: 1rem;
+  font-size: 1.25rem;
+  background-color: whitesmoke;
+  color: black;
+  font-family: 'Frank Ruhl Libre', serif;
+  line-height: 30px;
+}
+
+/* for line chart scrooly */
+#scrolly3 {
+  position: relative;
+  padding: 1rem;
+}
+
+.scrolly-overlay3 {
+  position: relative;
+  padding: 0;
+  min-width: 35rem;
+  margin: 0 auto;
+}
+
+.sticky-thing3 {
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0;
+  width: 100%;
+  margin: 0;
+  z-index: 0;
+  top: 0;
+  height: 100vh;
+  /* Center everything inside */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.step3 {
+  margin: 0 auto 2rem auto;
+  margin-bottom: 25rem;
+  background-color: #fff;
+  color: black;
+}
+
+.step3 p {
+  text-align: left;
+  padding: 1rem;
+  font-size: 1rem;
+  margin-left: 30px;
+  background-color: whitesmoke;
+}
+
+.hidden { visibility: hidden; }
+
+/* When it's less than 700 pixels wide, do normal scrollytelling */
+@media only screen and (min-width: 700px) {
+#scrolly3.side-by-side {
+display: flex;
+}
+
+#scrolly3.side-by-side > div {
+flex-basis: 0;
+flex-grow: 1;
+flex-shrink: 1;
+padding: 0.75em;
+}
+
+#scrolly3.side-by-side .scrolly-overlay3 {
+margin-top: 70vh;
+order: 0;
+/* Change these to adjust sizing options */
+min-width: 15rem;
+max-width: 20rem;
+}
+
+#scrolly3.side-by-side .sticky-thing3 {
+order: 1;
+flex-grow: 2;
+}
 }
