--- a/styles.css
+++ b/styles.css
@@ -4,21 +4,10 @@ html, body {
 }
 
 
-.full-bleed-image {
-    height: 100vh;
-    background-color: #243949;
-    background-size: cover;
-    background-position: bottom center;
-}
-
 .title-container {
     max-width: 760px;
     margin: 0 auto;
     padding-top: 10%;
-}
-
-.full-bleed-image .image-text {
-  margin: 0 auto;
 }
 
 .main-container {
@@ -73,6 +62,9 @@ html, body {
     font-weight: 400;
     font-size: 0.9em;
     margin: 1.5em auto 3em auto;
+    background-color: transparent;
+    line-height: 0;
+
 }
 
 .main-container p {
@@ -192,7 +184,7 @@ p.firstpara {
     margin: 1em auto 1em auto;
 }
 
-#header .box {
+.box {
   position: inherit;
   float: left;
   height: 20px;
@@ -216,6 +208,15 @@ p.firstpara {
     background-color: #7fb6c6;
 }
 
+.legend-bar {
+  position: inherit;
+  padding: 0;
+  height: 10px;
+  width: 100px;
+  margin-bottom: 15px;
+  background-image: linear-gradient(to right, #ee9b00,#9b2226);
+}
+
 /* each text box is a feature */
 
 #features h3 {
@@ -230,20 +231,39 @@ p.firstpara {
     font-family: 'Martel', serif;
     text-align: left;
     font-size: 1.2em;
-    max-width: 50vw;
+    line-height: 1.9em;
     
 }
 #features .imageCredit {
   font-size: 0.9em;
   margin-top: -5px;
+  padding-bottom: 30px;
+  text-align: center;
+  font-style: italic;
+  margin: 0 auto;
 }
-#footer p {
+
+.main-container .imageCredit {
+  font-size: 0.8em;
+  margin-top: -10px;
+  padding-bottom: 30px;
+  text-align: center;
+  font-style: italic;
+}
+
+#footer-box {
+  background-color: lightgray;
+
+}
+
+#footer-box p {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 0.9em;
   max-width: 600px;
   padding: 0.75em 0em;
   margin: 0px auto;
 }
+
 a, a:hover, a:visited {
   color: #df8351;
 }
@@ -270,11 +290,13 @@ a, a:hover, a:visited {
 
 .fully p{
   margin: 1em auto;
+  max-width: 600px;
 }
 
-.fully img{
+img{
   margin: 0 auto;
-  max-width: 60%;
+  padding-top: 30px;
+  max-width: 600px;
 }
 
 .light {
@@ -373,10 +395,11 @@ article {
 .step p {
   text-align: left;
   padding: 1rem;
-  font-size: 1.25rem;
+  font-size: 1.1rem;
+  line-height: 1.2rem;
   background-color: whitesmoke;
   color: black;
-  font-family: 'Frank Ruhl Libre', serif;
+  font-family: 'Martel', serif;
   line-height: 30px;
 }
 
