--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,17 @@ p.firstpara {
   padding-top: 5em;
 }
 
+.main-container h1 {
+  max-width: 600px;
+  font-family: 'Martel', serif;
+  font-style: italic;
+  font-weight: 600;
+  text-align: left;
+  font-size: 1.4em;
+  margin: 0em auto;
+  padding-top: 10px;
+}
+
 /* here is the style of chart */
 .chart-holder {
     margin: 0 auto;
@@ -128,12 +139,11 @@ p.firstpara {
 
 #features {
   padding-top: 80vh;
-  padding-bottom: 10vh;
 }
 
 @media (max-width: 750px) {
   #features {
-    width: 90vw;
+    width: 80vw;
     margin: 0 auto;
   }
 }
@@ -221,7 +231,7 @@ p.firstpara {
     
 }
 #features .imageCredit {
-  font-size: 0.9em;
+  font-size: 1em;
   margin-top: -5px;
   padding-bottom: 30px;
   text-align: left;
@@ -230,7 +240,7 @@ p.firstpara {
 }
 
 .main-container .imageCredit {
-  font-size: 0.8em;
+  font-size: 0.9em;
   margin-top: -10px;
   padding-bottom: 30px;
   text-align: left;
@@ -239,6 +249,8 @@ p.firstpara {
 
 #footer-box {
   background-color: lightgray;
+  padding-top: 40px;
+  padding-bottom: 40px;
 
 }
 
@@ -246,8 +258,10 @@ p.firstpara {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 0.9em;
   max-width: 600px;
-  padding: 0.75em 0em;
+  line-height: 1.6em;
   margin: 0px auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 #rockawayBeach {
@@ -261,7 +275,7 @@ a, a:hover, a:visited {
   visibility: hidden;
 }
 .centered {
-  width: 50vw;
+  width: 580px;
   margin: 0 auto;
 }
 .lefty {
@@ -299,14 +313,14 @@ img{
 }
 
 .step-second {
-  padding-bottom: 50vh;
+  padding-bottom: 100vh;
   opacity: 0.99;
 }
 .step-second .active {
   opacity: 0.99;
 }
 .step-second div {
-  padding: 25px 50px;
+  padding: 25px 40px;
   line-height: 25px;
   font-size: 13px;
 }
@@ -476,4 +490,22 @@ max-width: 20rem;
 order: 1;
 flex-grow: 2;
 }
+}
+
+/* Two pictures side by side */
+.column {
+  float: left;
+  width: 50%;
+}
+.row {
+  margin: 0 auto;
+  padding-top: 10px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+
+  content: "";
+  clear: both;
+  display: table;
 }
