--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,15 @@ html, body {
     padding: 0;
 }
 
-
+.front-page {
+  width: 100%;
+  height: 100vh;
+  background-image: url("images/frontpage.jpg")
+}
 .title-container {
     max-width: 760px;
     margin: 0 auto;
-    padding-top: 10%;
+    padding-top: 15%;
 }
 
 .main-container {
